@@ -1,3 +1,9 @@
+2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* UnixPath.cs: Follow .NET's System.IO.Path.Combine() behavior, and "reset"
+	  the generated path if any argument beings with a path root --
+	  UnixPath.Combine("/a", "/b") should return "/b", not "/a/b".  Fixes #78580.
+
 2006-04-21  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* UnixFileSystemInfo.cs: rename Create() to GetFileSystemEntry(), and make
